adjust header + anchor links

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,6 +35,13 @@
   <!-- /Banner -->
 
   <!-- Features -->
+  <!-- Updated: 2024-07-30 // Added anchor link to Get Involved-->
+  <div class="row bg-gradient" style="padding-top:1rem; padding-bottom: 1rem;">
+    <div class="col-12" style="text-align: center; vertical-align: middle;">
+      <h2 class="col-12" id="get-involved">Get Involved with DevOps KC</h2>
+    </div>
+  </div>
+
   {{ range $i, $e:= .Params.features }}
     <section class="section-sm {{ if (modBool $i 2) }}bg-gradient{{ end }}">
       <div class="container">
