--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,1 +1,13 @@
 // Add your own custom styles here
+
+// Account for fixed header in anchor links
+a[data-hs-anchor="true"] {   
+    display: block; 
+    position: relative; 
+    visibility: hidden; 
+    top: -150px;  
+   }
+
+.header {
+    padding-top: 0rem;
+}
